# hrc_legible_motion_generation

./: .gitignore  CMakeLists.txt  LICENSE  README  package.xml
include/: DmpSolver.hpp  Kinematics.hpp
include/dmp_bbo_node/: DistributionGaussian.hpp  Dmp.hpp  Dmp1.hpp  DynamicalSystem.hpp  EigenFileIO.hpp  EigenFileIO.tpp  ExponentialSystem.hpp  FunctionApproximator.hpp  FunctionApproximatorLWR.hpp  FunctionApproximatorRBFN.hpp  MetaParametersLWR.hpp  MetaParametersRBFN.hpp  ModelParameters.hpp  ModelParametersLWR.hpp  ModelParametersRBFN.hpp  SigmoidSystem.hpp  SpringDamperSystem.hpp  Task.hpp  TaskSolver.hpp  TaskSolverDmp.hpp  TaskSolverParallel.hpp  TaskViapoint.hpp  TaskWithTrajectoryDemonstrator.hpp  TimeSystem.hpp  Trajectory.hpp  UnifiedModel.hpp  Updater.hpp  UpdaterCovarDecay.hpp  UpdaterMean.hpp  gnuplot-iostream.h  keyboard.h  runEvolutionaryOptimization.hpp
launch/: dmp_bbo_vr.launch
src/: DmpSolver.cpp  Kinematics.cpp  backup_dmp_ros_ctl_ik.cpp  demoY_init&goals.txt  dmp_ros_ctl.cpp  dmp_ros_ctl_Mariam.cpp  dmp_ros_ctl_before_vel.cpp  dmp_ros_ctl_ik.cpp  dmp_ros_ctl_ik_train.cpp  dmp_ros_ctl_withvel_working.cpp  getFunctionApproximatorByName.cpp  publishJointPosFromCartesian.cpp
src/dmpbbo_node/: BasisFunction.cpp  DistributionGaussian.cpp  Dmp.cpp  DynamicalSystem.cpp  ExponentialSystem.cpp  FunctionApproximator.cpp  FunctionApproximatorLWR.cpp  FunctionApproximatorRBFN.cpp  MetaParameters.cpp  MetaParametersLWR.cpp  MetaParametersRBFN.cpp  ModelParameters.cpp  ModelParametersLWR.cpp  ModelParametersRBFN.cpp  Parameterizable.cpp  SigmoidSystem.cpp  SpringDamperSystem.cpp  TaskSolverDmp.cpp  TaskViapoint.cpp  TimeSystem.cpp  Trajectory.cpp  UnifiedModel.cpp  UpdateSummary.cpp  UpdateSummaryParallel.cpp  UpdaterCovarDecay.cpp  UpdaterMean.cpp  plotEvolutionaryOptimization.py  runEvolutionaryOptimization.cpp  runEvolutionaryOptimizationNew.cpp
