<?xml version="1.0"?>
<package>
  <name>predictable_motion_generator</name>
  <version>0.0.0</version>
  <description>The predictable_motion_generator package</description>

  <maintainer email="hrcstudents@todo.todo">hrcstudents</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>std_msgs</build_depend>      
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>urdf</build_depend>
  
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>keyboard</run_depend>  
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
